[gd_scene load_steps=6 format=2]

[ext_resource path="res://Main.gd" type="Script" id=1]
[ext_resource path="res://Octo.tscn" type="PackedScene" id=2]
[ext_resource path="res://UI-Godot/HUD.tscn" type="PackedScene" id=3]
[ext_resource path="res://UI-Godot/DebugMode.tscn" type="PackedScene" id=4]
[ext_resource path="res://Score.tscn" type="PackedScene" id=5]

[node name="Main" type="Node"]
script = ExtResource( 1 )

[node name="ColorRect" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0, 0, 0, 1 )

[node name="StartPosition" type="Position2D" parent="."]
rotation = 0.241716
__meta__ = {
"_edit_group_": true
}

[node name="Octo" parent="." instance=ExtResource( 2 )]
__meta__ = {
"_edit_lock_": true
}

[node name="DebugMode" parent="." instance=ExtResource( 4 )]

[node name="HUD" parent="." instance=ExtResource( 3 )]
rect_rotation = 0.0

[connection signal="show_debug_stats" from="." to="DebugMode" method="show_debug_stats"]
[connection signal="show_score" from="." to="Score" method="_on_Main_show_score"]
[connection signal="debug_update" from="Octo" to="." method="_on_Octo_debug_update"]
[connection signal="show_score" from="Octo" to="." method="_on_Octo_show_score"]
[connection signal="start_timer" from="Octo" to="DebugMode" method="_on_Octo_start_timer"]
[connection signal="exit" from="HUD" to="." method="exit"]
[connection signal="start_game" from="HUD" to="." method="start_game"]
[connection signal="home" from="Score" to="." method="_on_Score_home"]
